--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "php": "^7.0"
+        "php": "^7.0",
+        "sebastian/object-enumerator": "^3.0.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
